--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,37 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <ion-segment [(ngModel)]="pet">
+    <ion-segment-button value="kittens">
+      Biquinis
+    </ion-segment-button>
+    <ion-segment-button value="puppies">
+      Vestidos
+    </ion-segment-button>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  </ion-segment>
 </ion-content>
+
+<div [ngSwitch]="pet">
+
+  <ion-grid>
+    <ion-row *ngSwitchCase="'puppies'">
+      <ion-col col-6>This column will take 12 columns</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>This column will take 6 columns</ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+  <ion-grid>
+    <ion-row *ngSwitchCase="'kittens'">>
+      <ion-col col-6>This column will take 12 columns</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>This column will take 6 columns</ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+</div>
