--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,37 +8,39 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-segment [(ngModel)]="pet">
-    <ion-segment-button value="kittens">
-      Biquinis
-    </ion-segment-button>
-    <ion-segment-button value="puppies">
-      Vestidos
-    </ion-segment-button>
 
-  </ion-segment>
+  <ion-grid>
+    <ion-row>
+      <ion-col> 
+        <ion-card>
+          <ion-img width="80" height="80" src="assets/imgs/peca01.jpg"></ion-img>
+          <ion-card-content>
+            <ion-card-title>
+              Nine Inch Nails Live
+            </ion-card-title>
+            <p>
+              The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
+            </p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>Coluna (22,1) </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>Coluna (1,1) </ion-col>
+      <ion-col>Coluna (22,1) </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>Coluna (1,1) </ion-col>
+      <ion-col>Coluna (22,1) </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>Coluna (1,1) </ion-col>
+      <ion-col>Coluna (22,1) </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
-
-<div [ngSwitch]="pet">
-
-  <ion-grid>
-    <ion-row *ngSwitchCase="'puppies'">
-      <ion-col col-6>This column will take 12 columns</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-6>This column will take 6 columns</ion-col>
-    </ion-row>
-  </ion-grid>
-
-
-  <ion-grid>
-    <ion-row *ngSwitchCase="'kittens'">>
-      <ion-col col-6>This column will take 12 columns</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-6>This column will take 6 columns</ion-col>
-    </ion-row>
-  </ion-grid>
-
-
-</div>
