--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,37 +10,62 @@
 <ion-content padding>
 
   <ion-grid>
-    <ion-row>
-      <ion-col> 
+    <ion-row wrap>
+      <ion-col width-50>
+
         <ion-card>
-          <ion-img width="80" height="80" src="assets/imgs/peca01.jpg"></ion-img>
+          <ion-img width="100%" height="120" src="assets/imgs/peca01.jpg"></ion-img>
           <ion-card-content>
             <ion-card-title>
-              Nine Inch Nails Live
+              <p>Vestido</p>
+            </ion-card-title>
+            <p>R$ 100,00</p>
+          </ion-card-content>
+        </ion-card>
+
+      </ion-col>
+      <ion-col width-50>
+        <ion-card>
+          <ion-img width="100%" height="120" src="assets/imgs/peca02.jpg"></ion-img>
+          <ion-card-content>
+            <ion-card-title>
+              <p></p>
             </ion-card-title>
             <p>
-              The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
             </p>
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col>Coluna (22,1) </ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col>Coluna (1,1) </ion-col>
-      <ion-col>Coluna (22,1) </ion-col>
+    <ion-row wrap> 
+      <ion-col width-50>
+        <ion-card>
+          <ion-img width="100%" height="120" src="assets/imgs/peca03.jpg"></ion-img>
+          <ion-card-content>
+            <ion-card-title>
+              <p></p>
+            </ion-card-title>
+            <p>
+            </p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col width-50>
+        <ion-card>
+          <ion-img width="100%" height="120" src="assets/imgs/peca04.jpg"></ion-img>
+          <ion-card-content>
+            <ion-card-title>
+              <p></p>
+            </ion-card-title>
+            <p>
+            </p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col>Coluna (1,1) </ion-col>
-      <ion-col>Coluna (22,1) </ion-col>
-    </ion-row>
 
-    <ion-row>
-      <ion-col>Coluna (1,1) </ion-col>
-      <ion-col>Coluna (22,1) </ion-col>
-    </ion-row>
   </ion-grid>
 
 </ion-content>
