--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,39 +1,32 @@
 <ion-header>
-  <ion-navbar>
+  
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>D Morena</ion-title>
   </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
+<ion-content class="card-brackground-image">
 
   <ion-grid>
-    <ion-row wrap>
-      <ion-col width-50>
+    <ion-row>
+      <ion-col>
 
-        <ion-card>
+        <ion-card (click)="produtoSelecionado()">
           <ion-img width="100%" height="120" src="assets/imgs/peca01.jpg"></ion-img>
-          <ion-card-content>
-            <ion-card-title>
-              <p>Vestido</p>
-            </ion-card-title>
-            <p>R$ 100,00</p>
-          </ion-card-content>
+          <h5 class="card-title">Vestido</h5>
+          <h6 class="card-subtitle">R$ 100,00</h6>
         </ion-card>
 
       </ion-col>
       <ion-col width-50>
         <ion-card>
           <ion-img width="100%" height="120" src="assets/imgs/peca02.jpg"></ion-img>
-          <ion-card-content>
-            <ion-card-title>
-              <p></p>
-            </ion-card-title>
-            <p>
-            </p>
-          </ion-card-content>
+          <h5 class="card-title">Vestido</h5>
+          <h6 class="card-subtitle">R$ 100,00</h6>
         </ion-card>
       </ion-col>
     </ion-row>
