--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,21 +12,15 @@
 <ion-content class="card-brackground-image">
 
   <ion-grid>
-
-
-    <ion-row  *ngFor="let produto of produtos">
-
-      <ion-col>
-        <ion-card>
+    <ion-row  >
+      <ion-col col-6 *ngFor="let produto of produtos">
+        <ion-card (click)="produtoSelecionado($event,produto)">
           <ion-img width="100%" height="120" src="{{produto.imagem}}"></ion-img>
           <h5 class="card-title">{{produto.nome}}</h5>
           <h6 class="card-subtitle">{{produto.preco}}</h6>
         </ion-card>
       </ion-col>
-
     </ion-row>
-
-
   </ion-grid>
 
 </ion-content>
