Tela de login para id de pedidos

--- a/src/pages/detalhe-produto/detalhe-produto.html
+++ b/src/pages/detalhe-produto/detalhe-produto.html
@@ -19,10 +19,10 @@
 <ion-content padding >
   <ion-card>
       <ion-img width="100%" height="320" src="{{produto.imagem}}"></ion-img>
-      <h5 class="card-title">{{produto.nome}}</h5>
-      <h6 class="card-subtitle">{{produto.preco}}</h6>
-      <button ion-button icon-left clear >
-      <ion-icon name="md-cart"></ion-icon>
+      <h5 center text-center class="card-title">{{produto.nome}}</h5>
+      <h6 center text-center class="card-subtitle">{{produto.preco | currency : 'R$ ':'code'}}</h6>
+      <button ion-button icon-left clear item-right>
+        <ion-icon  name="md-cart"></ion-icon>
       </button>
   </ion-card>
 
