--- a/src/pages/detalhe-produto/detalhe-produto.html
+++ b/src/pages/detalhe-produto/detalhe-produto.html
@@ -21,7 +21,7 @@
       <ion-img width="100%" height="320" src="{{produto.imagem}}"></ion-img>
       <h5 center text-center class="card-title">{{produto.nome}}</h5>
       <h6 center text-center class="card-subtitle">{{produto.preco | currency : 'R$ ':'code'}}</h6>
-      <button ion-button icon-left clear item-right>
+      <button ion-button icon-left clear item-right  (click)="adicionaProduto()">
         <ion-icon  name="md-cart"></ion-icon>
       </button>
   </ion-card>
