--- a/src/pages/detalhe-produto/detalhe-produto.html
+++ b/src/pages/detalhe-produto/detalhe-produto.html
@@ -4,26 +4,50 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>{{produto.nome}}</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
-<ion-content padding >
-  <ion-card>
+<!--
+<ion-content  >
       <ion-img width="100%" height="320" src="{{produto.imagem}}"></ion-img>
       <h5 center text-center class="card-title">{{produto.nome}}</h5>
       <h6 center text-center class="card-subtitle">{{produto.preco | currency : 'R$ ':'code'}}</h6>
-      <button ion-button icon-left clear item-right  (click)="adicionaProduto()">
-        <ion-icon  name="md-cart"></ion-icon>
-      </button>
-  </ion-card>
 
+      <button ion-button round text-center  (click)="adicionaProduto()">Colocar no carrinho</button>
+  
+</ion-content>
+-->
+
+<ion-content no-bounce padding>
+
+  <ion-grid >
+    <ion-row>
+      <ion-col>
+        <img src="{{produto.imagem}}" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <h4 style="color:#000000;text-align:center;">
+          {{produto.nome}}
+        </h4>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <h4 style="color:#000000;text-align:center;">
+          {{produto.preco | currency : 'R$':'code'}}
+        </h4>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <button ion-button round color="royal" (click)="adicionaProduto()" block style="font-weight:500;margin-top: 50px">
+          Adicionar ao Carrinho
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
