--- a/src/pages/detalhe-produto/detalhe-produto.html
+++ b/src/pages/detalhe-produto/detalhe-produto.html
@@ -16,17 +16,26 @@
   
 </ion-content>
 -->
+<ion-header>
 
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>D Morena</ion-title>
+  </ion-navbar>
+
+</ion-header>
 <ion-content no-bounce >
 
   <ion-grid class="quadro">
-    <ion-row class="linha50">
+    <ion-row class="linha60">
       <ion-col >
-        <img src="{{produto.imagem}}" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;" />
+        <img src="{{produto.imagem}}" style="display:block;width:100%;height:100%;margin-left:auto;margin-right:auto;" />
       </ion-col>
     </ion-row>
 
-    <ion-row class="linha30">
+    <ion-row class="linha25">
       <ion-col >
         <h4 style="color:#000000;text-align:center;">
           {{produto.nome}}
@@ -39,9 +48,9 @@
 
 
 
-    <ion-row  class="linha20">
+    <ion-row  class="linha15">
       <ion-col  >
-        <button ion-button round color="royal" (click)="adicionaProduto()" block style="font-weight:500;margin-top: 50px">
+        <button ion-button round color="royal" (click)="adicionaProduto()" block style="font-weight:500;">
           Adicionar ao Carrinho
         </button>
       </ion-col>
