--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,6 +5,11 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>D Morena</ion-title>
+    <ion-buttons end>
+      <button >
+        <ion-icon name="cart"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
