--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,8 +6,9 @@
     </button>
     <ion-title>D Morena</ion-title>
     <ion-buttons end>
-      <button >
+      <button id="cart-btn" ion-button icon-only >
         <ion-icon name="cart"></ion-icon>
+        <ion-badge id="cart-badge">4</ion-badge>
       </button>
     </ion-buttons>
   </ion-navbar>
