Pedido com valor

--- a/src/pages/pedido/pedido.html
+++ b/src/pages/pedido/pedido.html
@@ -24,7 +24,7 @@
 
   <ion-item>
     <ion-list>
-      <ion-item  *ngFor="let itemPedido of listaItemPedido">
+      <ion-item  *ngFor="let itemPedido of pedido.itemPedidos">
         <ion-thumbnail item-start>
           <img src="{{itemPedido.produto.imagem}}">
         </ion-thumbnail>
