--- a/src/pages/pedido-fechado/pedido-fechado.html
+++ b/src/pages/pedido-fechado/pedido-fechado.html
@@ -1,18 +1,50 @@
 <!--
-  Generated template for the PedidoFechadoPage page.
+  Generated template for the PedidoPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>PedidoFechado</ion-title>
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>D Morena - Pedido Fechado</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
 
+
+<ion-content class="list-avatar-page">
+
+  <ion-grid class="quadro">
+
+    <ion-row class="linha20">
+      <ion-col>
+        <span item-begin>Total</span>
+        <span item-end>{{pedido.valor_total | currency : 'R$':'code'}}</span>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="linha60">
+      <ion-col>
+        <ion-list>
+          <ion-item *ngFor="let itemPedido of pedido.itemPedidos">
+            <ion-thumbnail item-start>
+              <img src="{{itemPedido.produto.imagem}}">
+            </ion-thumbnail>
+            <h3 text-wrap>{{itemPedido.nome_produto}}</h3>
+            <h4>{{itemPedido.preco_total | currency : 'R$':'code'}}</h4>
+            <p item-right>{{itemPedido.quantidade_produto}}</p>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+
+
+
+  </ion-grid>
 </ion-content>
