versao generica para imagens

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>D Morena</ion-title>
+    <ion-title>Loja Moda</ion-title>
     <ion-buttons end>
       <button id="notification-button" ion-button icon-only (click)="verCarrinho()">
        <ion-icon name="cart">
